...
    <string name="notification_button_go_back_title">-10s</string>
    <string name="notification_button_play_title">Play</string>
    <string name="notification_button_go_forward_title">+10s</string>
    <string name="podcast_list_item_fragment_empty">No podcasts available</string>
    <string name="podcast_detail_empty">Unable to load content</string>
    <string name="podcast_detail_error_loading">Could not load podcast list</string>
    <string name="podcast_detail_error_downloading">Could not download podcast list</string>
    <string name="podcast_list_item_board_prefix">Board:</string>
    <string name="rbtn_speed_2">2</string>
    <string name="rbtn_speed_1_75">1.75</string>
    <string name="rbtn_speed_1_5">1.5</string>
    <string name="rbtn_speed_1_25">1.25</string>
    <string name="rbtn_speed_1">1</string>
...
